syntax = "proto3";

package io.aurigraph.v11.quantconnect;

option java_package = "io.aurigraph.v11.quantconnect.grpc";
option java_outer_classname = "QuantConnectProto";
option java_multiple_files = true;

// =============================================================================
// QuantConnect gRPC Service
//
// Provides algorithmic trading data and backtesting integration via gRPC/HTTP2.
// Connects QuantConnect's trading infrastructure to Aurigraph slim nodes for
// tokenization and DLT-based trade settlement.
//
// Features:
// - Real-time market data streaming
// - Algorithm performance metrics
// - Backtest results streaming
// - Portfolio state synchronization
// - Order execution tracking
//
// Version: 1.0.0 (Dec 8, 2025)
// =============================================================================

// QuantConnect Service - Main gRPC service for algorithmic trading data
service QuantConnectService {
  // Unary RPCs
  rpc GetAlgorithmStatus(AlgorithmStatusRequest) returns (AlgorithmStatusResponse);
  rpc GetPortfolio(PortfolioRequest) returns (PortfolioResponse);
  rpc GetBacktestResults(BacktestRequest) returns (BacktestResponse);
  rpc GetMarketData(MarketDataRequest) returns (MarketDataResponse);
  rpc GetOrderHistory(OrderHistoryRequest) returns (OrderHistoryResponse);
  rpc GetServiceMetrics(QCMetricsRequest) returns (QCMetricsResponse);

  // Server-side streaming - Real-time data feeds
  rpc StreamMarketData(MarketDataStreamRequest) returns (stream MarketDataUpdate);
  rpc StreamOrders(OrderStreamRequest) returns (stream OrderUpdate);
  rpc StreamPortfolio(PortfolioStreamRequest) returns (stream PortfolioUpdate);
  rpc StreamBacktestProgress(BacktestStreamRequest) returns (stream BacktestProgress);

  // Bidirectional streaming - Algorithm control
  rpc AlgorithmControl(stream AlgorithmCommand) returns (stream AlgorithmEvent);
}

// Slim Node QuantConnect Service - For slim node integration
service SlimNodeQuantConnectService {
  // Slim node management
  rpc GetAssignedAlgorithms(AssignedAlgorithmsRequest) returns (AssignedAlgorithmsResponse);
  rpc AssignAlgorithmToNode(AlgorithmAssignmentRequest) returns (AlgorithmAssignmentResponse);
  rpc StreamToSlimNode(QCSlimNodeStreamRequest) returns (stream TokenizedTradeData);
  rpc GetIntegrationMetrics(QCIntegrationMetricsRequest) returns (QCIntegrationMetricsResponse);
}

// =============================================================================
// Common Types
// =============================================================================

enum SecurityType {
  SECURITY_TYPE_UNSPECIFIED = 0;
  EQUITY = 1;
  OPTION = 2;
  FOREX = 3;
  FUTURE = 4;
  CRYPTO = 5;
  INDEX = 6;
  COMMODITY = 7;
  CFD = 8;
}

enum Resolution {
  RESOLUTION_UNSPECIFIED = 0;
  TICK = 1;
  SECOND = 2;
  MINUTE = 3;
  HOUR = 4;
  DAILY = 5;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  MARKET = 1;
  LIMIT = 2;
  STOP_MARKET = 3;
  STOP_LIMIT = 4;
  MARKET_ON_OPEN = 5;
  MARKET_ON_CLOSE = 6;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  NEW = 1;
  SUBMITTED = 2;
  PARTIALLY_FILLED = 3;
  FILLED = 4;
  CANCELLED = 5;
  INVALID = 6;
  CANCEL_PENDING = 7;
  UPDATE_SUBMITTED = 8;
}

enum OrderDirection {
  DIRECTION_UNSPECIFIED = 0;
  BUY = 1;
  SELL = 2;
  HOLD = 3;
}

enum AlgorithmState {
  ALGORITHM_STATE_UNSPECIFIED = 0;
  DEPLOYED = 1;
  RUNNING = 2;
  STOPPED = 3;
  LIQUIDATED = 4;
  DELETED = 5;
  LOGGING_IN = 6;
  INITIALIZING = 7;
  HISTORY = 8;
}

message Symbol {
  string ticker = 1;
  SecurityType security_type = 2;
  string market = 3;  // e.g., "usa", "crypto", "forex"
  string currency = 4;
}

// =============================================================================
// Algorithm Messages
// =============================================================================

message AlgorithmStatusRequest {
  string algorithm_id = 1;
  string project_id = 2;
}

message AlgorithmStatusResponse {
  string algorithm_id = 1;
  string project_id = 2;
  string name = 3;
  AlgorithmState state = 4;
  double runtime_seconds = 5;
  int64 start_time = 6;
  int64 end_time = 7;
  string error_message = 8;
  AlgorithmStatistics statistics = 9;
}

message AlgorithmStatistics {
  double total_performance = 1;
  double sharpe_ratio = 2;
  double sortino_ratio = 3;
  double max_drawdown = 4;
  double win_rate = 5;
  double profit_loss_ratio = 6;
  int32 total_trades = 7;
  int32 winning_trades = 8;
  int32 losing_trades = 9;
  double average_win = 10;
  double average_loss = 11;
  double compounding_annual_return = 12;
  double annual_standard_deviation = 13;
  double alpha = 14;
  double beta = 15;
  double information_ratio = 16;
  double tracking_error = 17;
  double treynor_ratio = 18;
}

message AlgorithmCommand {
  string algorithm_id = 1;
  oneof command {
    StartCommand start = 2;
    StopCommand stop = 3;
    LiquidateCommand liquidate = 4;
    UpdateParameterCommand update_parameter = 5;
  }
}

message StartCommand {
  string deploy_id = 1;
  map<string, string> parameters = 2;
}

message StopCommand {
  string reason = 1;
}

message LiquidateCommand {
  bool market_order = 1;
}

message UpdateParameterCommand {
  string key = 1;
  string value = 2;
}

message AlgorithmEvent {
  string algorithm_id = 1;
  int64 timestamp = 2;
  oneof event {
    StateChangeEvent state_change = 3;
    LogEvent log = 4;
    ErrorEvent error = 5;
    InsightEvent insight = 6;
  }
}

message StateChangeEvent {
  AlgorithmState previous_state = 1;
  AlgorithmState new_state = 2;
}

message LogEvent {
  string level = 1;  // DEBUG, INFO, WARN, ERROR
  string message = 2;
  string stack_trace = 3;
}

message ErrorEvent {
  string error_code = 1;
  string message = 2;
  string stack_trace = 3;
}

message InsightEvent {
  Symbol symbol = 1;
  OrderDirection direction = 2;
  double magnitude = 3;
  double confidence = 4;
  int64 generated_time = 5;
  int64 close_time = 6;
}

// =============================================================================
// Portfolio Messages
// =============================================================================

message PortfolioRequest {
  string algorithm_id = 1;
}

message PortfolioResponse {
  double cash = 1;
  double total_portfolio_value = 2;
  double total_margin_used = 3;
  double buying_power = 4;
  repeated Holding holdings = 5;
  int64 timestamp = 6;
}

message Holding {
  Symbol symbol = 1;
  double quantity = 2;
  double average_price = 3;
  double market_price = 4;
  double market_value = 5;
  double unrealized_pnl = 6;
  double unrealized_pnl_percent = 7;
  double total_fees = 8;
}

message PortfolioStreamRequest {
  string algorithm_id = 1;
  int32 update_interval_ms = 2;  // Minimum interval between updates
}

message PortfolioUpdate {
  string algorithm_id = 1;
  int64 timestamp = 2;
  double cash = 3;
  double total_portfolio_value = 4;
  repeated Holding changed_holdings = 5;
  double daily_pnl = 6;
  double daily_pnl_percent = 7;
}

// =============================================================================
// Market Data Messages
// =============================================================================

message MarketDataRequest {
  Symbol symbol = 1;
  Resolution resolution = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  int32 limit = 5;
}

message MarketDataResponse {
  Symbol symbol = 1;
  Resolution resolution = 2;
  repeated Bar bars = 3;
  int64 latency_ms = 4;
}

message Bar {
  int64 time = 1;
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  double volume = 6;
}

message Quote {
  Symbol symbol = 1;
  double bid_price = 2;
  double bid_size = 3;
  double ask_price = 4;
  double ask_size = 5;
  int64 timestamp = 6;
}

message Trade {
  Symbol symbol = 1;
  double price = 2;
  double quantity = 3;
  int64 timestamp = 4;
  string trade_id = 5;
}

message MarketDataStreamRequest {
  repeated Symbol symbols = 1;
  Resolution resolution = 2;
  bool include_quotes = 3;
  bool include_trades = 4;
}

message MarketDataUpdate {
  oneof data {
    Bar bar = 1;
    Quote quote = 2;
    Trade trade = 3;
  }
  int64 timestamp = 4;
}

// =============================================================================
// Order Messages
// =============================================================================

message Order {
  int32 order_id = 1;
  Symbol symbol = 2;
  OrderType order_type = 3;
  OrderDirection direction = 4;
  OrderStatus status = 5;
  double quantity = 6;
  double filled_quantity = 7;
  double limit_price = 8;
  double stop_price = 9;
  double average_fill_price = 10;
  int64 created_time = 11;
  int64 last_fill_time = 12;
  int64 last_update_time = 13;
  string tag = 14;
  double total_fees = 15;
}

message OrderHistoryRequest {
  string algorithm_id = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  OrderStatus status_filter = 4;
  int32 limit = 5;
}

message OrderHistoryResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
  int64 latency_ms = 3;
}

message OrderStreamRequest {
  string algorithm_id = 1;
  bool include_fills = 2;
}

message OrderUpdate {
  Order order = 1;
  string event_type = 2;  // SUBMITTED, FILLED, PARTIAL_FILL, CANCELLED
  double fill_quantity = 3;
  double fill_price = 4;
  int64 timestamp = 5;
}

// =============================================================================
// Backtest Messages
// =============================================================================

message BacktestRequest {
  string backtest_id = 1;
  string project_id = 2;
}

message BacktestResponse {
  string backtest_id = 1;
  string name = 2;
  int64 start_date = 3;
  int64 end_date = 4;
  double progress = 5;  // 0.0 to 1.0
  bool completed = 6;
  AlgorithmStatistics statistics = 7;
  repeated EquityCurvePoint equity_curve = 8;
  repeated Order trades = 9;
  string error_message = 10;
}

message EquityCurvePoint {
  int64 time = 1;
  double equity = 2;
  double benchmark = 3;
  double drawdown = 4;
}

message BacktestStreamRequest {
  string backtest_id = 1;
  string project_id = 2;
}

message BacktestProgress {
  string backtest_id = 1;
  double progress = 2;
  int64 current_date = 3;
  double current_equity = 4;
  int32 trades_executed = 5;
  string status_message = 6;
  bool completed = 7;
  AlgorithmStatistics partial_statistics = 8;
}

// =============================================================================
// Metrics Messages
// =============================================================================

message QCMetricsRequest {
  bool include_per_algorithm = 1;
}

message QCMetricsResponse {
  int64 total_algorithms = 1;
  int64 running_algorithms = 2;
  int64 backtests_completed = 3;
  int64 orders_processed = 4;
  int64 market_data_points = 5;
  int64 uptime_seconds = 6;
  map<string, AlgorithmMetrics> per_algorithm = 7;
}

message AlgorithmMetrics {
  string algorithm_id = 1;
  AlgorithmState state = 2;
  int64 orders_submitted = 3;
  int64 orders_filled = 4;
  double total_pnl = 5;
  int64 runtime_seconds = 6;
}

// =============================================================================
// Slim Node Messages
// =============================================================================

message AssignedAlgorithmsRequest {
  string slim_node_id = 1;
}

message AssignedAlgorithmsResponse {
  repeated string algorithm_ids = 1;
  int32 total_count = 2;
}

message AlgorithmAssignmentRequest {
  string slim_node_id = 1;
  string algorithm_id = 2;
  bool include_market_data = 3;
  bool include_orders = 4;
  bool include_portfolio = 5;
}

message AlgorithmAssignmentResponse {
  bool success = 1;
  string message = 2;
  string slim_node_id = 3;
  string algorithm_id = 4;
}

message QCSlimNodeStreamRequest {
  string slim_node_id = 1;
  bool include_trades = 2;
  bool include_portfolio_updates = 3;
  bool include_market_data = 4;
}

message TokenizedTradeData {
  string token_id = 1;
  string token_type = 2;  // "QC_TRADE", "QC_PORTFOLIO", "QC_MARKET_DATA"
  string slim_node_id = 3;
  string algorithm_id = 4;
  bytes data = 5;  // Serialized trade/portfolio/market data
  int64 timestamp = 6;
  string merkle_root = 7;
  string settlement_status = 8;  // PENDING, SETTLED, FAILED
}

message QCIntegrationMetricsRequest {}

message QCIntegrationMetricsResponse {
  int64 total_trades_tokenized = 1;
  int64 total_settlements_completed = 2;
  int64 total_portfolio_updates = 3;
  int32 active_algorithm_streams = 4;
  int32 total_slim_nodes = 5;
  map<string, SlimNodeQCMetrics> node_metrics = 6;
}

message SlimNodeQCMetrics {
  string node_id = 1;
  string status = 2;
  int32 assigned_algorithms = 3;
  int64 trades_processed = 4;
  int64 settlements_completed = 5;
  int32 pending_settlements = 6;
}
