#!/usr/bin/env node

/**
 * Multi-Agent Sprint Execution Framework
 * Orchestrates 10 specialized agents to execute pending tickets across sprints
 *
 * Agents: CAA, BDA, FDA, SCA, ADA, IBA, QAA, DDA, DOA, PMA
 * Total: 1000 pending tickets, 5890 story points, 118 sprints
 */

const https = require('https');
const fs = require('fs');

// JIRA Configuration
const JIRA_BASE_URL = 'aurigraphdlt.atlassian.net';
const JIRA_API_TOKEN = process.env.JIRA_API_TOKEN || 'ATATT3xFfGF0c79X44m_ecHcP5d2F-jx5ljisCVB11tCEl5jB0Cx_FaapQt_u44IqcmBwfq8Gl8CsMFdtu9mqV8SgzcUwjZ2TiHRJo9eh718fUYw7ptk5ZFOzc-aLV2FH_ywq2vSsJ5gLvSorz-eB4JeKxUSLyYiGS9Y05-WhlEWa0cgFUdhUI4=0BECD4F5';
const JIRA_EMAIL = 'subbu@aurigraph.io';
const PROJECT_KEY = 'AV11';

const auth = Buffer.from(`${JIRA_EMAIL}:${JIRA_API_TOKEN}`).toString('base64');

// Agent Definitions (10 specialized agents)
const AGENTS = {
    CAA: {
        name: 'Chief Architect Agent',
        role: 'System architecture and strategic decisions',
        keywords: ['architecture', 'design', 'planning', 'strategic', 'system'],
        subagents: ['Architecture Validator', 'Performance Analyzer', 'Tech Debt Manager']
    },
    BDA: {
        name: 'Backend Development Agent',
        role: 'Core blockchain platform development',
        keywords: ['consensus', 'transaction', 'backend', 'java', 'quarkus', 'grpc', 'service', 'api', 'core'],
        subagents: ['Consensus Specialist', 'Transaction Processor', 'State Manager', 'Network Protocol Expert']
    },
    FDA: {
        name: 'Frontend Development Agent',
        role: 'User interfaces and dashboards',
        keywords: ['dashboard', 'ui', 'frontend', 'visualization', 'react', 'interface', 'mobile', 'web'],
        subagents: ['UI Designer', 'Dashboard Specialist', 'Mobile Developer', 'Visualization Expert']
    },
    SCA: {
        name: 'Security & Cryptography Agent',
        role: 'Security implementation and auditing',
        keywords: ['security', 'crypto', 'quantum', 'audit', 'penetration', 'vulnerability', 'dilithium', 'kyber'],
        subagents: ['Crypto Implementer', 'Penetration Tester', 'Audit Specialist', 'Key Manager']
    },
    ADA: {
        name: 'AI/ML Development Agent',
        role: 'AI-driven optimization and analytics',
        keywords: ['ai', 'ml', 'machine learning', 'prediction', 'optimization', 'anomaly', 'analytics'],
        subagents: ['Model Trainer', 'Anomaly Detector', 'Predictor', 'Optimizer']
    },
    IBA: {
        name: 'Integration & Bridge Agent',
        role: 'Cross-chain and external integrations',
        keywords: ['bridge', 'cross-chain', 'integration', 'migration', 'connector', 'ethereum', 'polkadot'],
        subagents: ['Bridge Builder', 'API Developer', 'Connector Specialist', 'Migration Expert']
    },
    QAA: {
        name: 'Quality Assurance Agent',
        role: 'Testing and quality control',
        keywords: ['test', 'testing', 'quality', 'coverage', 'junit', 'integration', 'validation'],
        subagents: ['Unit Tester', 'Integration Tester', 'Performance Tester', 'Coverage Analyst']
    },
    DDA: {
        name: 'DevOps & Deployment Agent',
        role: 'CI/CD and infrastructure management',
        keywords: ['deployment', 'kubernetes', 'docker', 'ci/cd', 'infrastructure', 'devops', 'pipeline'],
        subagents: ['Pipeline Manager', 'Container Specialist', 'Infrastructure Coder', 'Monitor']
    },
    DOA: {
        name: 'Documentation Agent',
        role: 'Technical documentation and knowledge management',
        keywords: ['documentation', 'guide', 'tutorial', 'api doc', 'readme', 'wiki'],
        subagents: ['API Documenter', 'Tutorial Writer', 'Diagram Creator', 'Knowledge Curator']
    },
    PMA: {
        name: 'Project Management Agent',
        role: 'Sprint planning and task coordination',
        keywords: ['sprint', 'planning', 'coordination', 'epic', 'roadmap'],
        subagents: ['Sprint Planner', 'Task Allocator', 'Progress Tracker', 'Risk Analyzer']
    }
};

// Sprint Configuration
const SPRINT_CONFIG = {
    pointsPerSprint: 50,
    sprintDurationDays: 14,
    parallelAgents: true,
    autoJiraUpdate: true
};

function makeJiraRequest(method, path, data = null) {
    return new Promise((resolve, reject) => {
        const options = {
            hostname: JIRA_BASE_URL,
            path: `/rest/api/3${path}`,
            method: method,
            headers: {
                'Authorization': `Basic ${auth}`,
                'Accept': 'application/json',
                'Content-Type': 'application/json'
            }
        };

        const req = https.request(options, (res) => {
            let responseData = '';
            res.on('data', (chunk) => responseData += chunk);
            res.on('end', () => {
                if (res.statusCode >= 200 && res.statusCode < 300) {
                    try {
                        resolve(JSON.parse(responseData));
                    } catch (e) {
                        resolve(responseData);
                    }
                } else {
                    console.error(`âŒ API Error: ${res.statusCode} - ${responseData}`);
                    reject(new Error(`Request failed with status ${res.statusCode}`));
                }
            });
        });

        req.on('error', (error) => reject(error));
        if (data) req.write(JSON.stringify(data));
        req.end();
    });
}

function loadPendingTickets() {
    console.log('ğŸ“¥ Loading pending tickets from prioritization data...\n');

    try {
        const data = fs.readFileSync('pending-tickets-with-estimates.json', 'utf8');
        const tickets = JSON.parse(data);

        console.log(`âœ… Loaded ${tickets.length} pending tickets\n`);
        return tickets;
    } catch (error) {
        console.error('âŒ Error loading tickets:', error.message);
        return [];
    }
}

function assignTicketToAgent(ticket) {
    const summary = ticket.summary.toLowerCase();
    const type = ticket.issueType;

    // Score each agent based on keyword matches
    const scores = {};

    Object.entries(AGENTS).forEach(([agentId, agent]) => {
        let score = 0;

        agent.keywords.forEach(keyword => {
            if (summary.includes(keyword)) {
                score += 10;
            }
        });

        // Bonus for specific patterns
        if (type === 'Epic' && agentId === 'PMA') score += 20; // PMA handles epics
        if (summary.includes('test') && agentId === 'QAA') score += 15;
        if (summary.includes('deploy') && agentId === 'DDA') score += 15;
        if (summary.includes('ui') && agentId === 'FDA') score += 15;

        scores[agentId] = score;
    });

    // Find agent with highest score
    const bestAgent = Object.entries(scores).reduce((best, [id, score]) =>
        score > best.score ? { id, score } : best
    , { id: 'PMA', score: 0 }); // Default to PMA if no match

    return bestAgent.id;
}

function organizeSprints(tickets) {
    console.log('ğŸ“Š Organizing tickets into sprints...\n');

    const sprints = [];
    let currentSprint = {
        number: 1,
        tickets: [],
        points: 0,
        agents: {}
    };

    // Sort tickets by priority (High > Medium > Low)
    const priorityOrder = { 'High': 1, 'Medium': 2, 'Low': 3 };
    const sortedTickets = [...tickets].sort((a, b) => {
        const priorityDiff = priorityOrder[a.priority] - priorityOrder[b.priority];
        if (priorityDiff !== 0) return priorityDiff;
        return b.points - a.points; // Higher points first
    });

    sortedTickets.forEach(ticket => {
        const agent = assignTicketToAgent(ticket);

        // Check if adding this ticket would exceed sprint capacity
        if (currentSprint.points + ticket.points > SPRINT_CONFIG.pointsPerSprint) {
            // Start new sprint
            sprints.push(currentSprint);
            currentSprint = {
                number: sprints.length + 1,
                tickets: [],
                points: 0,
                agents: {}
            };
        }

        // Add ticket to current sprint
        currentSprint.tickets.push({
            ...ticket,
            assignedAgent: agent,
            agentName: AGENTS[agent].name
        });
        currentSprint.points += ticket.points;

        // Track agent workload
        if (!currentSprint.agents[agent]) {
            currentSprint.agents[agent] = {
                tickets: 0,
                points: 0
            };
        }
        currentSprint.agents[agent].tickets++;
        currentSprint.agents[agent].points += ticket.points;
    });

    // Add final sprint
    if (currentSprint.tickets.length > 0) {
        sprints.push(currentSprint);
    }

    console.log(`âœ… Organized ${tickets.length} tickets into ${sprints.length} sprints\n`);
    return sprints;
}

function generateSprintPlan(sprints) {
    console.log('ğŸ“ Generating sprint execution plan...\n');

    const lines = [];

    lines.push('# Multi-Agent Sprint Execution Plan');
    lines.push('');
    lines.push(`**Generated:** ${new Date().toISOString()}`);
    lines.push(`**Total Sprints:** ${sprints.length}`);
    lines.push(`**Total Tickets:** ${sprints.reduce((sum, s) => sum + s.tickets.length, 0)}`);
    lines.push(`**Total Points:** ${sprints.reduce((sum, s) => sum + s.points, 0)}`);
    lines.push('');

    // Agent Summary
    lines.push('## ğŸ¤– Agent Workload Summary');
    lines.push('');

    const agentWorkload = {};
    sprints.forEach(sprint => {
        Object.entries(sprint.agents).forEach(([agentId, work]) => {
            if (!agentWorkload[agentId]) {
                agentWorkload[agentId] = { tickets: 0, points: 0 };
            }
            agentWorkload[agentId].tickets += work.tickets;
            agentWorkload[agentId].points += work.points;
        });
    });

    lines.push('| Agent | Role | Tickets | Points | Workload % |');
    lines.push('|-------|------|---------|--------|-----------|');

    const totalPoints = Object.values(agentWorkload).reduce((sum, w) => sum + w.points, 0);
    Object.entries(agentWorkload).sort((a, b) => b[1].points - a[1].points).forEach(([agentId, work]) => {
        const percentage = ((work.points / totalPoints) * 100).toFixed(1);
        lines.push(`| **${agentId}** | ${AGENTS[agentId].role} | ${work.tickets} | ${work.points} | ${percentage}% |`);
    });
    lines.push('');

    // Sprint Details
    lines.push('## ğŸ“… Sprint Execution Plan');
    lines.push('');

    sprints.slice(0, 20).forEach(sprint => {
        lines.push(`### Sprint ${sprint.number} (${sprint.points} points, ${sprint.tickets.length} tickets)`);
        lines.push('');

        // Agent breakdown for this sprint
        lines.push('**Agent Distribution:**');
        Object.entries(sprint.agents).forEach(([agentId, work]) => {
            lines.push(`- **${agentId}** (${AGENTS[agentId].name}): ${work.tickets} tickets, ${work.points} points`);
        });
        lines.push('');

        // Top 5 tickets
        lines.push('**Key Tickets:**');
        sprint.tickets.slice(0, 5).forEach(ticket => {
            const icon = ticket.issueType === 'Epic' ? 'ğŸ“—' : 'ğŸ“™';
            lines.push(`- ${icon} **${ticket.key}**: ${ticket.summary}`);
            lines.push(`  - Agent: ${ticket.assignedAgent} (${ticket.agentName})`);
            lines.push(`  - Priority: ${ticket.priority} | Points: ${ticket.points}`);
        });

        if (sprint.tickets.length > 5) {
            lines.push(`- *... and ${sprint.tickets.length - 5} more tickets*`);
        }
        lines.push('');
        lines.push('---');
        lines.push('');
    });

    if (sprints.length > 20) {
        lines.push(`*... and ${sprints.length - 20} more sprints*`);
        lines.push('');
    }

    // Parallel Execution Strategy
    lines.push('## ğŸ”„ Parallel Execution Strategy');
    lines.push('');
    lines.push('### Phase 1: Foundation Sprints (1-10)');
    lines.push('**Focus**: Core platform, consensus, security foundation');
    lines.push('**Parallel Teams:**');
    lines.push('- Team 1: BDA + QAA (Backend development and testing)');
    lines.push('- Team 2: SCA + ADA (Security and AI optimization)');
    lines.push('- Team 3: IBA + DDA (Integration and deployment)');
    lines.push('- Coordination: CAA + PMA (Architecture and project management)');
    lines.push('');

    lines.push('### Phase 2: Integration Sprints (11-30)');
    lines.push('**Focus**: Cross-chain bridges, APIs, testing');
    lines.push('**Parallel Teams:**');
    lines.push('- Team 1: BDA + IBA (Backend and integration)');
    lines.push('- Team 2: FDA + DOA (Frontend and documentation)');
    lines.push('- Team 3: QAA + ADA (Testing and AI optimization)');
    lines.push('- Security: SCA (Continuous security auditing)');
    lines.push('');

    lines.push('### Phase 3: Optimization Sprints (31-60)');
    lines.push('**Focus**: Performance tuning, UI/UX, production readiness');
    lines.push('**Parallel Teams:**');
    lines.push('- Team 1: ADA + BDA (AI optimization and backend tuning)');
    lines.push('- Team 2: FDA + DOA (UI polish and comprehensive docs)');
    lines.push('- Team 3: QAA + DDA (Testing and deployment automation)');
    lines.push('');

    lines.push('### Phase 4: Production Sprints (61+)');
    lines.push('**Focus**: Production deployment, monitoring, maintenance');
    lines.push('**All Agents**: Full coordination for production launch');
    lines.push('');

    // Timeline
    const totalWeeks = sprints.length * 2; // 2 weeks per sprint
    const totalMonths = Math.ceil(totalWeeks / 4);

    lines.push('## ğŸ“ˆ Timeline & Milestones');
    lines.push('');
    lines.push(`- **Total Duration:** ${totalWeeks} weeks (${totalMonths} months)`);
    lines.push(`- **Sprint Duration:** ${SPRINT_CONFIG.sprintDurationDays} days`);
    lines.push(`- **Target Velocity:** ${SPRINT_CONFIG.pointsPerSprint} points/sprint`);
    lines.push(`- **Parallel Agents:** ${SPRINT_CONFIG.parallelAgents ? 'Enabled' : 'Disabled'}`);
    lines.push('');

    lines.push('**Key Milestones:**');
    lines.push(`- Sprint 10 (Week 20): Core platform complete`);
    lines.push(`- Sprint 30 (Week 60): Integration phase complete`);
    lines.push(`- Sprint 60 (Week 120): Optimization complete`);
    lines.push(`- Sprint ${sprints.length} (Week ${totalWeeks}): Production launch`);
    lines.push('');

    // Next Steps
    lines.push('## ğŸš€ Next Steps');
    lines.push('');
    lines.push('1. **Review and Approve**: Review this plan with stakeholders');
    lines.push('2. **Agent Setup**: Configure all 10 agent environments');
    lines.push('3. **JIRA Configuration**: Setup sprint boards and automation');
    lines.push('4. **Start Sprint 1**: Begin execution with foundation team');
    lines.push('5. **Daily Sync**: Establish daily 09:00 UTC agent sync');
    lines.push('6. **Progress Tracking**: Weekly progress reviews with PMA');
    lines.push('');

    lines.push('---');
    lines.push('');
    lines.push('**Status:** Ready for execution');
    lines.push('**Contact:** subbu@aurigraph.io');
    lines.push('**JIRA Board:** https://aurigraphdlt.atlassian.net/jira/software/projects/AV11/boards/789');

    return lines.join('\n');
}

function generateSprintDetailedJSON(sprints) {
    return {
        metadata: {
            generated: new Date().toISOString(),
            totalSprints: sprints.length,
            totalTickets: sprints.reduce((sum, s) => sum + s.tickets.length, 0),
            totalPoints: sprints.reduce((sum, s) => sum + s.points, 0),
            configuration: SPRINT_CONFIG
        },
        agents: AGENTS,
        sprints: sprints.map(sprint => ({
            sprintNumber: sprint.number,
            points: sprint.points,
            ticketCount: sprint.tickets.length,
            startDate: null, // To be filled during execution
            endDate: null,
            status: 'Pending',
            agents: sprint.agents,
            tickets: sprint.tickets.map(t => ({
                key: t.key,
                summary: t.summary,
                issueType: t.issueType,
                priority: t.priority,
                points: t.points,
                assignedAgent: t.assignedAgent,
                agentName: t.agentName,
                status: t.status,
                jiraUrl: `https://aurigraphdlt.atlassian.net/browse/${t.key}`
            }))
        }))
    };
}

async function executeFirstSprint(sprints) {
    if (sprints.length === 0) {
        console.log('âŒ No sprints to execute');
        return;
    }

    console.log('\nğŸš€ DEMO: Executing Sprint 1 (First 5 tickets)...\n');

    const sprint1 = sprints[0];
    const ticketsToExecute = sprint1.tickets.slice(0, 5); // Execute first 5 tickets as demo

    for (const ticket of ticketsToExecute) {
        console.log(`\nğŸ“‹ Processing: ${ticket.key}`);
        console.log(`   Summary: ${ticket.summary}`);
        console.log(`   Agent: ${ticket.assignedAgent} (${ticket.agentName})`);
        console.log(`   Priority: ${ticket.priority} | Points: ${ticket.points}`);

        // Simulate agent work
        console.log(`   ğŸ¤– ${ticket.assignedAgent} is processing...`);

        // In real implementation, this would:
        // 1. Transition ticket to "In Progress"
        // 2. Execute agent-specific logic
        // 3. Run tests/validation
        // 4. Update JIRA with progress
        // 5. Transition to "Done" when complete

        await new Promise(resolve => setTimeout(resolve, 1000)); // Simulate work

        console.log(`   âœ… Completed by ${ticket.assignedAgent}`);
    }

    console.log(`\nâœ… Sprint 1 Demo Complete (5/${sprint1.tickets.length} tickets executed)`);
    console.log(`   Remaining tickets: ${sprint1.tickets.length - 5}`);
    console.log(`   Points completed: ${ticketsToExecute.reduce((sum, t) => sum + t.points, 0)}/${sprint1.points}`);
}

async function main() {
    console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
    console.log('  Multi-Agent Sprint Execution Framework');
    console.log('  Aurigraph DLT V11 - Automated Sprint Planning');
    console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n');

    try {
        // Load pending tickets
        const tickets = loadPendingTickets();

        if (tickets.length === 0) {
            console.log('âŒ No tickets to process');
            return;
        }

        // Organize into sprints
        const sprints = organizeSprints(tickets);

        // Generate execution plan
        console.log('ğŸ“ Generating execution plan...\n');
        const plan = generateSprintPlan(sprints);

        // Save plan
        const planPath = 'MULTI-AGENT-SPRINT-PLAN.md';
        fs.writeFileSync(planPath, plan);
        console.log(`âœ… Sprint plan saved: ${planPath}\n`);

        // Save detailed JSON
        const detailedJSON = generateSprintDetailedJSON(sprints);
        const jsonPath = 'sprint-execution-plan.json';
        fs.writeFileSync(jsonPath, JSON.stringify(detailedJSON, null, 2));
        console.log(`âœ… Detailed JSON saved: ${jsonPath}\n`);

        // Execute first sprint as demo
        await executeFirstSprint(sprints);

        // Print summary
        console.log('\nâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•');
        console.log('ğŸ“Š EXECUTION PLAN SUMMARY:\n');
        console.log(`Total Sprints: ${sprints.length}`);
        console.log(`Total Tickets: ${tickets.length}`);
        console.log(`Total Points: ${sprints.reduce((sum, s) => sum + s.points, 0)}`);
        console.log(`Estimated Duration: ${sprints.length * 2} weeks`);
        console.log('');

        console.log('Agent Workload:');
        const agentWorkload = {};
        sprints.forEach(sprint => {
            Object.entries(sprint.agents).forEach(([agentId, work]) => {
                if (!agentWorkload[agentId]) {
                    agentWorkload[agentId] = { tickets: 0, points: 0 };
                }
                agentWorkload[agentId].tickets += work.tickets;
                agentWorkload[agentId].points += work.points;
            });
        });

        Object.entries(agentWorkload).sort((a, b) => b[1].points - a[1].points).forEach(([agentId, work]) => {
            console.log(`  ${agentId}: ${work.tickets} tickets, ${work.points} points`);
        });

        console.log('');
        console.log('âœ… Sprint planning complete!');
        console.log('â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n');

    } catch (error) {
        console.error('âŒ Fatal error:', error);
        process.exit(1);
    }
}

main();
